[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "LarScriptaleLibrary"
version = "1.0"

description = "LarScriptaleLibrary"

keywords = ["1145", "ctyps", "python", "scrip"]

readme = "README.md"

dependencies = ["pyautogui", "opencv-python",  "pynput", "keyboard", "mouse"]

# 包的声明
[tool.setuptools]
packages = ["LarScriptaleLibrary"]
